--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-    <p>safafasca</p>
+    
+    <div class="banner">
+        <div class="nav-bar">
+            <div id="logo">
+                <img src="assets/image2.png" alt="logo">
+            </div>
+            <div id="links">
+                <ul>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#" id="button" >Login</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="header">
+            <h1>Home Page</h1>
+        </div>
+    </div>
 </body>
 </html>
