2 new pages and form

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dylan's page</title>
+    <title>Home page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-    
     <div class="banner">
         <div class="nav-bar">
             <div id="logo">
@@ -17,15 +16,19 @@
             <div id="links">
                 <ul>
                     <li><a href="#">Profile</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="About-Us.html">About Us</a></li>
+                    <li><a href="Contact-us.html">Contact us</a></li>
                     <li><a href="#" id="button" >Login</a></li>
                 </ul>
             </div>
         </div>
         <div id="header">
-            <h1>Home Page</h1>
+            <h1>DICE</h1>
+        </div>
+        <div id="p1">
+            <p>Intelligentsia ethical ethnic craft beer vinyl, trust fund butcher banh mi mumblecore sustainable yr. Before they sold out pop-up chia direct trade Odd Future Echo Park quinoa, Shoreditch art party. Selfies hashtag Williamsburg, High Life fashion axe four loko trust fund paleo Bushwick fixie. XOXO Tumblr mumblecore art party, pour-over VHS whatever High Life craft beer</p>
         </div>
     </div>
+    
 </body>
 </html>
