--- a/Contact-us.html
+++ b/Contact-us.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About-Us.html">About Us</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#" id="button" >Login</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="login.html" id="button" >Login</a></li>
                 </ul>
             </div>
         </div>
@@ -69,7 +69,12 @@
                 <input type="submit" value="Submit">
               </div>
             </form>
-          </div>    <!--Form End-->
+          </div>
+          <!--    <footer>
+        <div id="footer">
+            <p>copyright &copy; 2018 <strong>DICE</strong></p>
+        </div>
+        </footer>   -->   <!--Form End-->
     </div>
 </body>
 </html>
