--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             </div>
             <div id="links">
                 <ul>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="About-Us.html">About Us</a></li>
                     <li><a href="Contact-us.html">Contact us</a></li>
-                    <li><a href="#" id="button" >Login</a></li>
+                    <li><a href="login.html" id="button" >Login</a></li>
                 </ul>
             </div>
         </div>
@@ -28,6 +28,11 @@
         <div id="p1">
             <p>Intelligentsia ethical ethnic craft beer vinyl, trust fund butcher banh mi mumblecore sustainable yr. Before they sold out pop-up chia direct trade Odd Future Echo Park quinoa, Shoreditch art party. Selfies hashtag Williamsburg, High Life fashion axe four loko trust fund paleo Bushwick fixie. XOXO Tumblr mumblecore art party, pour-over VHS whatever High Life craft beer</p>
         </div>
+        <!--    <footer>
+        <div id="footer">
+            <p>copyright &copy; 2018 <strong>DICE</strong></p>
+        </div>
+        </footer>   
     </div>
     
 </body>
