--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Us</title>
+    <title>Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css" />
 </head>
@@ -17,22 +17,24 @@
             <div id="links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="About-Us.html">About Us</a></li>
                     <li><a href="Contact-us.html">Contact us</a></li>
                     <li><a href="login.html" id="button" >Login</a></li>
                 </ul>
             </div>
         </div>
         <div id="header">
-            <h1>About Us</h1>
+            <h1>Profile</h1>
         </div>
-        <div id="p2">
+        <div id="profile-image">
+            <img src="assets/image3.png" alt="profile-image">
+        </div>
+        <div id="p3">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim fermentum pharetra.
                  Sed auctor urna in augue ultrices scelerisque.
                  Nunc dictum pharetra arcu id laoreet.
                  Curabitur volutpat odio augue, vitae fermentum augue finibus eget.
-                  Integer viverra nibh ut augue efficitur, eget pulvinar lacus tincidunt.
-                 Donec a consequat augue. Morbi sit amet lobortis sapien. Sed dictum nisl ac tellus gravida, non semper ex euismod. Sed vitae placerat ex, suscipit cursus neque.
+                   Morbi sit amet lobortis sapien. Sed dictum nisl ac tellus gravida, non semper ex euismod. Sed vitae placerat ex, suscipit cursus neque.
                   Ut ornare turpis eget arcu convallis congue. Pellentesque enim turpis, hendrerit vulputate dui vitae, porta consectetur libero.</p>
         </div>
         <!--    <footer>
