--- a/Contact-us.html
+++ b/Contact-us.html
@@ -26,6 +26,9 @@
         <div id="header">
             <h1>Contact Us</h1>
         </div>
+        <div id="to-location-page">
+            <a href="location.html">Our Location</a>
+        </div>
         <div class="container">     <!--Form Start-->
             <form action="#">
               <div class="row">
@@ -54,6 +57,7 @@
                     <option value="South America">South America</option>
                     <option value="Africa">Africa</option>
                     <option value="Europe">Europe</option>
+                    <option value="Asia">Asia</option>
                   </select>
                 </div>
               </div>
