--- a/login.html
+++ b/login.html
@@ -23,12 +23,13 @@
                 </ul>
             </div>
         </div>
-        <div id="header">
-            <h1>Login</h1>
-        </div>
-        <div id="p2">
-            <p>...</p>
-        </div>
+        <div id="login1">   <!--LOGIN FORM START-->
+            <form action="#">
+                <input type="text" placeholder="Username" name="username">
+                <input type="text" placeholder="Password" name="password">
+                <button type="submit">Login</button>
+            </form>
+        </div>  <!--LOGIN FORM END-->
         <!--    <footer>
         <div id="footer">
             <p>copyright &copy; 2018 <strong>DICE</strong></p>
