--- a/profile.html
+++ b/profile.html
@@ -26,17 +26,19 @@
         <div id="header">
             <h1>Profile</h1>
         </div>
-        <div id="profile-image">
-            <img src="assets/image3.png" alt="profile-image">
-        </div>
-        <div id="p3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim fermentum pharetra.
-                 Sed auctor urna in augue ultrices scelerisque.
-                 Nunc dictum pharetra arcu id laoreet.
-                 Curabitur volutpat odio augue, vitae fermentum augue finibus eget.
-                   Morbi sit amet lobortis sapien. Sed dictum nisl ac tellus gravida, non semper ex euismod. Sed vitae placerat ex, suscipit cursus neque.
-                  Ut ornare turpis eget arcu convallis congue. Pellentesque enim turpis, hendrerit vulputate dui vitae, porta consectetur libero.</p>
-        </div>
+
+        <div id="profile-section">
+                <img src="assets/image3.png" alt="Profile picture">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at tincidunt lacus, nec tempus elit. Curabitur quis dapibus nisi.
+                     Curabitur pharetra nulla eget sapien semper, non convallis magna varius. Integer tempus tellus sit amet diam auctor fringilla.
+                      Vestibulum diam risus, laoreet interdum aliquam non, placerat sed massa. Donec tempor erat a pellentesque sagittis. Nam et gravida lectus.
+                       Nam risus ipsum, lobortis ut tellus vitae, elementum lobortis metus. Integer mollis dolor in urna rhoncus, lobortis egestas tortor congue.
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                         Vivamus imperdiet suscipit augue, quis ullamcorper odio tristique eget.Ut ac finibus justo.
+                     Nam consectetur ipsum semper eros mattis lobortis. Vestibulum a enim leo. Nam eleifend est ut augue gravida pharetra.
+                      Curabitur tincidunt massa quis est interdum, sed tempus eros consequat.</p>
+            </div>
+        
         <!--    <footer>
         <div id="footer">
             <p>copyright &copy; 2018 <strong>DICE</strong></p>
