--- a/About-Us.html
+++ b/About-Us.html
@@ -26,14 +26,11 @@
         <div id="header">
             <h1>About Us</h1>
         </div>
-        <div id="p2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim fermentum pharetra.
-                 Sed auctor urna in augue ultrices scelerisque.
-                 Nunc dictum pharetra arcu id laoreet.
-                 Curabitur volutpat odio augue, vitae fermentum augue finibus eget.
-                  Integer viverra nibh ut augue efficitur, eget pulvinar lacus tincidunt.
-                 Donec a consequat augue. Morbi sit amet lobortis sapien. Sed dictum nisl ac tellus gravida, non semper ex euismod. Sed vitae placerat ex, suscipit cursus neque.
-                  Ut ornare turpis eget arcu convallis congue. Pellentesque enim turpis, hendrerit vulputate dui vitae, porta consectetur libero.</p>
+        <div id="p4">
+            <p>DICE is a recognized industry leader in all facets of development and construction management for the construction market sector. Our cutting-edge expertise ensures optimum construction quality, safety and performance with each and every project.
+                At DICE, we take pride in our longstanding reputation for consistently delivering timely and professionally executed projects, along with uncompromising quality, efficiency and reliability.
+                
+                With a professional takeoff services team of highly qualified estimators and surveyors, DICE provides crucial insight into the bidding and contracting phase. Our team of estimators maintain the requisite knowledge and hands-on experience, with a minimum of ten years each in in the field of general contracting and sub-contracting.</p>
         </div>
         <!--    <footer>
         <div id="footer">
