--- a/About-Us.html
+++ b/About-Us.html
@@ -17,7 +17,7 @@
             <div id="links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="History.html">History</a></li>
                     <li><a href="Contact-us.html">Contact us</a></li>
                     <li><a href="login.html" id="button" >Login</a></li>
                 </ul>
@@ -27,11 +27,15 @@
             <h1>About Us</h1>
         </div>
         <div id="p4">
-            <p>DICE is a recognized industry leader in all facets of development and construction management for the construction market sector. Our cutting-edge expertise ensures optimum construction quality, safety and performance with each and every project.
-                At DICE, we take pride in our longstanding reputation for consistently delivering timely and professionally executed projects, along with uncompromising quality, efficiency and reliability.
-                
-                With a professional takeoff services team of highly qualified estimators and surveyors, DICE provides crucial insight into the bidding and contracting phase. Our team of estimators maintain the requisite knowledge and hands-on experience, with a minimum of ten years each in in the field of general contracting and sub-contracting.</p>
+            <p>DICE's team of seasoned project managers provides critical management and oversight throughout every step of the construction process. DICE's scheduling team specializes in providing Critical Path Method (CPM) scheduling and project controls – the critical underpinnings for developing, analyzing, updating and monitoring project schedules and other project reporting procedures. Our passion for excellence and perfection is reflected every facet of the project's execution as relates to:
+
+                quality, safety, efficiency and	reliability. </p>
         </div>
+
+        <div id="image8-pos">
+            <img src="assets/image8.jpg" alt="image8">
+        </div>
+
         <!--    <footer>
         <div id="footer">
             <p>copyright &copy; 2018 <strong>DICE</strong></p>
