--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="links">
                 <ul>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="History.html">History</a></li>
                     <li><a href="About-Us.html">About Us</a></li>
                     <li><a href="Contact-us.html">Contact us</a></li>
                     <li><a href="login.html" id="button" >Login</a></li>
@@ -40,11 +40,11 @@
         </div>
 
 
-        <!-- <div class="flex-container">                                               NEEDS WORK (CSS ASWELL)
-            <div><img src="assets/image4.jpg" alt="image4"></div>
-            <div><img src="assets/image5.jpg" alt="image5"></div>
-            <div><img src="assets/image6.jpg" alt="image6"></div>
-        </div> -->
+         <div class="flex-container">                                              <!-- NEEDS WORK (CSS ASWELL) -->
+            <div><img src="assets/image4.jpg" alt="image4" class="image-frame"></div>
+            <div><img src="assets/image5.jpg" alt="image5" class="image-frame"></div>
+            <div><img src="assets/image6.jpg" alt="image6" class="image-frame"></div>
+        </div>
 
 
         <!--    <footer>
