--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <div id="links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="History.html">History</a></li>
                     <li><a href="Contact-us.html">Contact us</a></li>
                     <li><a href="#" id="button" >Login</a></li>
                 </ul>
