--- a/location.html
+++ b/location.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About-Us.html">About Us</a></li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="History.html">History</a></li>
                     <li><a href="login.html" id="button" >Login</a></li>
                 </ul>
             </div>
